# assetxplorer

./: Makefile.am  README.md  autogen.sh  configure.ac  madbob-assetxplorer.doap  org.madbob.Assetxplorer.spec
data/: Makefile.am  app-menu.ui  application.css  grid.ui  main.ui  org.madbob.Assetxplorer.appdata.xml.in  org.madbob.Assetxplorer.busname  org.madbob.Assetxplorer.data.gresource.xml  org.madbob.Assetxplorer.desktop.in  org.madbob.Assetxplorer.gschema.xml  org.madbob.Assetxplorer.service.in
data/icons/: Makefile.am
po/: POTFILES.in  it.po
src/: Makefile.am  assetxplorer.in  grid.py  main.py  org.madbob.Assetxplorer.in  package.py  util.py  window.py
